hack/kubectl/flow-test.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flow-test
  name: flow-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flow-test
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: flow-test
    spec:
      containers:
      - name: flow-test
        image: flow-test
        command: ["/app"]
        volumeMounts:
        - name: tls
          mountPath: "/ssl/certs/iam.crt"
          subPath: tls.crt
          readOnly: true
        - name: tls
          mountPath: "/ssl/certs/iam.ca.crt"
          subPath: ca.crt
          readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: iam-tls
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flow-test
  name: flow-test
spec:
  ports:
    - name: web
      port: 80
      targetPort: 8000
  selector:
    app: flow-test
